# boring-math-recursive-functions

./: CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/workflows/: static.yml
docs/: Makefile  gen_conf.py
docs/source/: changelog.rst  description.rst  index.rst  releases.rst  usage.rst
docs/source/api/: ackermann.rst  fibonacci.rst
docs/source/api/cli/: ackermann_cli.rst  fibonacci_cli.rst  index.rst
src/bm/recursive_functions/: __init__.py
src/boring_math/recursive_functions/: __init__.py  ackermann.py  examples.py  fibonacci.py
src/boring_math/recursive_functions/cli/: __init__.py  ackermann.py  ackermann_cli.py  fibonacci_cli.py
