[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boring-math-recursive-functions"
version = "0.7.1"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
keywords = [
  "ackermann",
  "fibonacci",
  "recursive",
  "recursive functions",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["description"]

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
]

[project.urls]
Changelog = "https://github.com/grscheller/boring-math-recursive-functions/blob/main/CHANGELOG.md"
Documentation = "https://grscheller.github.io/boring-math/recursive-functions/development/build/html/releases.html"
Homepage = "https://grscheller.github.io/boring-math/blob/main/README.md"
Source = "https://github.com/grscheller/boring-math-recursive-functions"

[project.scripts]
ackermann = "boring_math.recursive_functions.cli.ackermann:ackermann_cli"

[tool.flit.module]
name = "boring_math.integer_math"

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
implicit_reexport = false
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
strict = true
report_progress = true

[tool.pytest.ini_options]
consider_namespace_packages = true
testpaths = ["tests/"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
ignore = ["E741"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
