[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boring-math-recursive-functions"
version = "1.0.1"
readme = "README.rst"
requires-python = ">=3.13"
authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
keywords = [
  "ackermann",
  "fibonacci",
  "recursive",
  "recursive functions",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Education",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pythonic-fp-iterables>=5.1.4",
]
dynamic = ["description"]

[project.urls]
Changelog = "https://github.com/grscheller/boring-math-recursive-functions/blob/main/CHANGELOG.md"
Documentation = "https://grscheller.github.io/boring-math/homepage/build/html/projects/recursive_functions.html"
Homepage = "https://grscheller.github.io/boring-math/"
Source = "https://github.com/grscheller/boring-math-recursive-functions"

[project.scripts]
ackermann_list = "boring_math.recursive_functions.cli.ackermann_cli:ackermann_list_cli"
fibonacci = "boring_math.recursive_functions.cli.fibonacci_cli:fibonacci"

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
]

[tool.flit.module]
name = "boring_math.recursive_functions"

[tool.mypy]
explicit_package_bases = true
local_partial_types = true
namespace_packages = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
dmypy = false
strict = true
report_progress = true

[tool.pytest.ini_options]
addopts = "-ra"
consider_namespace_packages = true
testpaths = ["tests/"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "E731",
  "C901",
]
"**/*.py" = ["E741"]

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
